log.txt
running develop
running build_scripts
running egg_info
running build_src
build_src
building extension "pynlsl" sources
f2py options: []
f2py: pynlsl.pyf
Reading fortran codes...
	Reading file 'pynlsl.pyf' (format:free)
Post-processing...
	Block: pynlsl
			Block: procline
In: pynlsl.pyf:pynlsl:unknown_interface:procline
get_useparameters: no module nlsnam info used by procline
In: pynlsl.pyf:pynlsl:unknown_interface:procline
get_useparameters: no module stdio info used by procline
In: pynlsl.pyf:pynlsl:unknown_interface:procline
get_useparameters: no module symdef info used by procline
			Block: nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module expdat info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module eprprm info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module parcom info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module basis info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module stdio info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module iterat info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module tridag info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module mspctr info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module nlsnam info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module lmcom info used by nlsinit
In: pynlsl.pyf:pynlsl:unknown_interface:nlsinit
get_useparameters: no module nlsdim info used by nlsinit
			Block: lmcom
In: pynlsl.pyf:pynlsl:unknown_interface:lmcom
get_useparameters: no module nlsdim info used by lmcom
				Block: lmcom_init
In: pynlsl.pyf:pynlsl:unknown_interface:lmcom:lmcom_init
get_useparameters: no module nlsdim info used by lmcom_init
Post-processing (stage 2)...
	Block: pynlsl
		Block: unknown_interface
			Block: procline
			Block: nlsinit
			Block: lmcom
				Block: lmcom_init
Building modules...
	Building module "pynlsl"...
		Constructing wrapper function "procline"...
		  procline(line)
		Constructing wrapper function "nlsinit"...
		  nlsinit()
		Constructing F90 module support for "lmcom"...
		  Variables: maxev tcov corr maxitr gradf flmprm qtf lmflag nflmpr ilmprm gnvec work1 xtol fjac ftol info x fvec diag gtol ipvt nilmpr factor nprint work2 work3 work4 mode
			Constructing wrapper function "lmcom.lmcom_init"...
			  lmcom_init()
	Wrote C/API module "pynlsl" to file ".\pynlslmodule.c"
	Fortran 90 wrappers are saved to ".\pynlsl-f2pywrappers2.f90"
  adding 'build\src.win32-2.7\fortranobject.c' to sources.
  adding 'build\src.win32-2.7' to include_dirs.
  adding '.\pynlsl-f2pywrappers2.f90' to sources.
 - nothing done with h_files = ['fortrancall.h']
build_src: building npy-pkg config files
writing requirements to NLSL.egg-info\requires.txt
writing NLSL.egg-info\PKG-INFO
writing top-level names to NLSL.egg-info\top_level.txt
writing dependency_links to NLSL.egg-info\dependency_links.txt
package init file 'nlsl\__init__.py' not found (or not a regular file)
reading manifest file 'NLSL.egg-info\SOURCES.txt'
writing manifest file 'NLSL.egg-info\SOURCES.txt'
running build_ext
Cannot build msvcr library: "msvcr90d.dll" not found
customize Mingw32CCompiler
customize Mingw32CCompiler using build_ext
customize GnuFCompiler
Could not locate executable g77
Could not locate executable f77
customize IntelVisualFCompiler
Could not locate executable ifort
Could not locate executable ifl
customize AbsoftFCompiler
Could not locate executable f90
customize CompaqVisualFCompiler
Could not locate executable DF
customize IntelItaniumVisualFCompiler
Could not locate executable efl
customize Gnu95FCompiler
Found executable c:\MinGW32-xy\bin\gfortran.exe
Found executable c:\MinGW32-xy\bin\gfortran.exe
customize Gnu95FCompiler
customize Gnu95FCompiler using build_ext
building 'pynlsl' extension
compiling C sources
C compiler: gcc -O2 -Wall -Wstrict-prototypes

compile options: '-DADD_UNDERSCORE -DNPY_MINGW_USE_CUSTOM_MSVCR -D__MSVCRT_VERSION__=0x0900 -Ibuild\src.win32-2.7 -Ic:\Python27\lib\site-packages\numpy\core\include -Ic:\Python27\include -Ic:\Python27\PC -c'
gcc -O2 -Wall -Wstrict-prototypes -DADD_UNDERSCORE -DNPY_MINGW_USE_CUSTOM_MSVCR -D__MSVCRT_VERSION__=0x0900 -Ibuild\src.win32-2.7 -Ic:\Python27\lib\site-packages\numpy\core\include -Ic:\Python27\include -Ic:\Python27\PC -c lprmpt.c -o build\temp.win32-2.7\Release\lprmpt.o
Found executable c:\MinGW32-xy\bin\gcc.exe
gcc -O2 -Wall -Wstrict-prototypes -DADD_UNDERSCORE -DNPY_MINGW_USE_CUSTOM_MSVCR -D__MSVCRT_VERSION__=0x0900 -Ibuild\src.win32-2.7 -Ic:\Python27\lib\site-packages\numpy\core\include -Ic:\Python27\include -Ic:\Python27\PC -c catch.c -o build\temp.win32-2.7\Release\catch.o
gcc -O2 -Wall -Wstrict-prototypes -DADD_UNDERSCORE -DNPY_MINGW_USE_CUSTOM_MSVCR -D__MSVCRT_VERSION__=0x0900 -Ibuild\src.win32-2.7 -Ic:\Python27\lib\site-packages\numpy\core\include -Ic:\Python27\include -Ic:\Python27\PC -c pltx_dummy.c -o build\temp.win32-2.7\Release\pltx_dummy.o
gcc -O2 -Wall -Wstrict-prototypes -DADD_UNDERSCORE -DNPY_MINGW_USE_CUSTOM_MSVCR -D__MSVCRT_VERSION__=0x0900 -Ibuild\src.win32-2.7 -Ic:\Python27\lib\site-packages\numpy\core\include -Ic:\Python27\include -Ic:\Python27\PC -c genio.c -o build\temp.win32-2.7\Release\genio.o
gcc -O2 -Wall -Wstrict-prototypes -DADD_UNDERSCORE -DNPY_MINGW_USE_CUSTOM_MSVCR -D__MSVCRT_VERSION__=0x0900 -Ibuild\src.win32-2.7 -Ic:\Python27\lib\site-packages\numpy\core\include -Ic:\Python27\include -Ic:\Python27\PC -c pynlslmodule.c -o build\temp.win32-2.7\Release\pynlslmodule.o
In file included from c:\Python27\lib\site-packages\numpy\core\include/numpy/ndarraytypes.h:1761:0,
                 from c:\Python27\lib\site-packages\numpy\core\include/numpy/ndarrayobject.h:17,
                 from c:\Python27\lib\site-packages\numpy\core\include/numpy/arrayobject.h:4,
                 from build\src.win32-2.7/fortranobject.h:13,
                 from pynlslmodule.c:18:
c:\Python27\lib\site-packages\numpy\core\include/numpy/npy_1_7_deprecated_api.h:12:9: note: #pragma message: c:\Python27\lib\site-packages\numpy\core\include/numpy/npy_1_7_deprecated_api.h(12) : Warning Msg: Using deprecated NumPy API, disable it by #defining NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION
 #pragma message(_WARN___LOC__"Using deprecated NumPy API, disable it by " \
         ^
pynlslmodule.c:443:16: error: 'mxtv' undeclared here (not in a function)
   {"tcov",2,{{(mxtv),(mxtv)}},NPY_DOUBLE},
                ^
pynlslmodule.c:444:16: error: 'mxjcol' undeclared here (not in a function)
   {"corr",2,{{(mxjcol),(mxjcol)}},NPY_DOUBLE},
                ^
pynlslmodule.c:455:16: error: 'mxpt' undeclared here (not in a function)
   {"fjac",2,{{(mxpt),(mxjcol)}},NPY_DOUBLE},
                ^
pynlslmodule.c: In function 'initpynlsl':
pynlslmodule.c:562:3: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
   Py_TYPE(&PyFortran_Type) = &PyType_Type;
   ^
pynlslmodule.c: At top level:
pynlslmodule.c:136:12: warning: 'f2py_size' defined but not used [-Wunused-function]
 static int f2py_size(PyArrayObject* var, ...)
            ^
error: Command "gcc -O2 -Wall -Wstrict-prototypes -DADD_UNDERSCORE -DNPY_MINGW_USE_CUSTOM_MSVCR -D__MSVCRT_VERSION__=0x0900 -Ibuild\src.win32-2.7 -Ic:\Python27\lib\site-packages\numpy\core\include -Ic:\Python27\include -Ic:\Python27\PC -c pynlslmodule.c -o build\temp.win32-2.7\Release\pynlslmodule.o" failed with exit status 1
